News, Category, tags Seeder, Catergory CRUD and UI Fixes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,8 @@
 /*------------------------------------------------------------------
-Project:  MagNews
-Version:  
-Last change:  
-Assigned to:  Le Xuan Bach
+Project:  Singh IT
+Version:
+Last change:
+Assigned to:  Singh IT
 Primary use:  Company
 -------------------------------------------------------------------*/
 /*------------------------------------------------------------------
@@ -19,10 +19,10 @@ Primary use:  Company
 /*------------------------------------------------------------------
 [COLOR CODES]
 
-# Text Color      :  
-# Primary Color 01:  
-# Primary Color 02:   
-# Primary Color 03:  
+# Text Color      :
+# Primary Color 01:
+# Primary Color 02:
+# Primary Color 03:
 
 ------------------------------------------------------------------*/
 /*------------------------------------------------------------------
@@ -43,29 +43,29 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 [ 1 ]*/
 @font-face {
   font-family: Roboto-Regular;
-  src: url('../fonts/Roboto/Roboto-Regular.ttf'); 
+  src: url('../fonts/Roboto/Roboto-Regular.ttf');
 }
 
 @font-face {
   font-family: Roboto-Medium;
-  src: url('../fonts/Roboto/Roboto-Medium.ttf'); 
+  src: url('../fonts/Roboto/Roboto-Medium.ttf');
 }
 
 @font-face {
   font-family: Roboto-Bold;
-  src: url('../fonts/Roboto/Roboto-Bold.ttf'); 
+  src: url('../fonts/Roboto/Roboto-Bold.ttf');
 }
 
 @font-face {
   font-family: Roboto-Black;
-  src: url('../fonts/Roboto/Roboto-Black.ttf'); 
+  src: url('../fonts/Roboto/Roboto-Black.ttf');
 }
 
 /*------------------------------------------------------------------
 [ 2 ]*/
 @font-face {
   font-family: Lato-Regular;
-  src: url('../fonts/Lato/Lato-Regular.ttf'); 
+  src: url('../fonts/Lato/Lato-Regular.ttf');
 }
 
 
@@ -94,7 +94,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 .loader05 {
   width: 56px;
   height: 56px;
-  border: 4px solid #17b978;
+  border: 4px solid #223999;
   border-radius: 50%;
   position: relative;
   animation: loader-scale 1s ease-out infinite;
@@ -109,7 +109,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
     opacity: 1; }
   100% {
     transform: scale(1);
-    opacity: 0; } 
+    opacity: 0; }
 }
 
 
@@ -126,7 +126,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
   height: 35px;
   bottom: -40px;
   right: 40px;
-  background-color: #17b978;
+  background-color: #223999;
   justify-content: center;
   align-items: center;
   z-index: 1000;
@@ -209,7 +209,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 }
 
 a.left-topbar-item:hover {
-  color: #17b978;
+  color: #223999;
 }
 
 .left-topbar-item::before {
@@ -246,7 +246,7 @@ a.left-topbar-item:hover {
 }
 
 .right-topbar a:hover {
-  color: #17b978;
+  color: #223999;
 }
 
 /*------------------------------------------------------------------
@@ -401,7 +401,7 @@ a.left-topbar-item:hover {
   font-size: 16px;
   line-height: 1.5;
   color: #222;
-  
+
   position: relative;
   display: -webkit-box;
   display: -webkit-flex;
@@ -496,8 +496,8 @@ li.main-menu-active > a::before {
   -moz-transition: all 0.3s;
 
   visibility: hidden;
-  opacity: 0; 
-  
+  opacity: 0;
+
   border: 1px solid #f2f2f2;
   box-shadow: 0 5px 10px 0px rgba(0,0,0,0.2);
   -moz-box-shadow: 0 5px 10px 0px rgba(0,0,0,0.2);
@@ -535,7 +535,7 @@ li.respon-sub-menu > .sub-menu .sub-menu {
   color: #222;
 
   display: block;
-  padding: 8px 30px; 
+  padding: 8px 30px;
   width: 100%;
 
   transition: all 0.3s;
@@ -557,12 +557,12 @@ li.respon-sub-menu > .sub-menu .sub-menu {
 
 /*---------------------------------------------*/
 .main-menu > li:hover > a:after {
-  color: #17b978;
+  color: #223999;
 }
 
 .main-menu > li:hover > a {
   text-decoration: none;
-  color: #17b978;
+  color: #223999;
 }
 
 .main-menu > li:hover > .sub-menu {
@@ -573,14 +573,14 @@ li.respon-sub-menu > .sub-menu .sub-menu {
 .sub-menu li:hover > .sub-menu {
   visibility: visible;
   opacity: 1;
-} 
+}
 
 .sub-menu li:hover {
   background-color: transparent;
 }
 
 .sub-menu > li:hover > a {
-  background-color: #17b978;
+  background-color: #223999;
   color: #fff;
   text-decoration: none;
 }
@@ -599,7 +599,7 @@ li.respon-sub-menu > .sub-menu .sub-menu {
   background-color: #fff;
   width: 100%;
   display: none;
-  
+
   border: 1px solid #f2f2f2;
   box-shadow: 0 5px 10px 0px rgba(0,0,0,0.2);
   -moz-box-shadow: 0 5px 10px 0px rgba(0,0,0,0.2);
@@ -636,10 +636,10 @@ li.respon-sub-menu > .sub-menu .sub-menu {
   padding: 8px 20px 8px 33px;
 }
 
-.sub-mega-menu .nav-pills .nav-link.active, 
+.sub-mega-menu .nav-pills .nav-link.active,
 .sub-mega-menu .show>.nav-pills .nav-link {
   color: #fff;
-  background-color: #17b978;
+  background-color: #223999;
 }
 
 /*---------------------------------------------*/
@@ -721,8 +721,8 @@ li.respon-sub-menu > .sub-menu .sub-menu {
   max-width: calc(100% - 35px);
   max-height: 60%;
   position:absolute;
-  top: 0; 
-  left: 0; 
+  top: 0;
+  left: 0;
   bottom: 0;
   margin: auto;
 }
@@ -744,8 +744,8 @@ li.respon-sub-menu > .sub-menu .sub-menu {
   transform: scale(0.6);
 }
 
-.hamburger-inner, 
-.hamburger-inner:after, 
+.hamburger-inner,
+.hamburger-inner:after,
 .hamburger-inner:before {
   border-radius: 0;
 }
@@ -762,7 +762,7 @@ li.respon-sub-menu > .sub-menu .sub-menu {
 .main-menu-m {
   padding-top: 13px;
   padding-bottom: 23px;
-  background-color: #17b978;
+  background-color: #223999;
 }
 
 .main-menu-m > li > a {
@@ -784,7 +784,7 @@ li.respon-sub-menu > .sub-menu .sub-menu {
 
 .main-menu-m > li {
   position: relative;
-  background-color: #17b978;
+  background-color: #223999;
 }
 
 .arrow-main-menu-m {
@@ -831,7 +831,7 @@ li.respon-sub-menu > .sub-menu .sub-menu {
 .sub-menu-m a {
   font-family: Roboto-Regular;
   font-size: 15px;
-  color: #17b978;
+  color: #223999;
   line-height: 2.5;
   padding: 5px 15px 5px 15px;
 }
@@ -861,7 +861,7 @@ li.respon-sub-menu > .sub-menu .sub-menu {
     height: auto;
   }
 
-  .banner-header {  
+  .banner-header {
     width: 100%;
     justify-content: center;
   }
@@ -901,7 +901,7 @@ li.respon-sub-menu > .sub-menu .sub-menu {
   font-size: 14px;
   color: #555;
   line-height: 1.7;
-  
+
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -931,7 +931,7 @@ li.respon-sub-menu > .sub-menu .sub-menu {
   border-bottom: 1px solid #d5d5d5;
   left: calc(50% - 5px);
   bottom: -5px;
-  
+
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
@@ -940,7 +940,7 @@ li.respon-sub-menu > .sub-menu .sub-menu {
 }
 
 .tab01 .nav-link:hover {
-  color: #17b978 !important;
+  color: #223999 !important;
 }
 
 
@@ -970,7 +970,7 @@ li.respon-sub-menu > .sub-menu .sub-menu {
 }
 
 .tab01 .dropdown-menu .nav-link.active {
-  color: #17b978;
+  color: #223999;
 }
 
 .tab01 .dropdown-menu .nav-link.active::after {
@@ -997,7 +997,7 @@ body {padding-right: 0px !important;}
 #modal-video-01 {
   background-color: rgba(0,0,0,0.8);
   z-index: 1250;
-  
+
 }
 
 #modal-video-01 .modal-dialog {
@@ -1093,7 +1093,7 @@ body {padding-right: 0px !important;}
 }
 
 a.breadcrumb-item:hover {
-  color: #17b978;
+  color: #223999;
 }
 
 /*//////////////////////////////////////////////////////////////////
@@ -1110,14 +1110,14 @@ a.breadcrumb-item:hover {
 }
 
 .pagi-item.pagi-active {
-  background-color: #17b978;
-  border-color: #17b978;
+  background-color: #223999;
+  border-color: #223999;
   color: #fff;
 }
 
 
 /*==================================================================
-   COLOR COLOR COLOR COLOR COLOR COLOR COLOR COLOR COLOR COLOR COLOR 
+   COLOR COLOR COLOR COLOR COLOR COLOR COLOR COLOR COLOR COLOR COLOR
 ==================================================================*/
 .bocl0 {border-color: #fff;}
 .bocl1 {border-color: #111;}
@@ -1129,7 +1129,7 @@ a.breadcrumb-item:hover {
 .bocl7 {border-color: #777;}
 .bocl8 {border-color: #888;}
 .bocl9 {border-color: #999;}
-.bocl10 {border-color: #17b978;}
+.bocl10 {border-color: #223999;}
 .bocl11 {border-color: #e6e6e6;}
 .bocl12 {border-color: #ccc;}
 .bocl13 {border-color: #d9d9d9;}
@@ -1146,7 +1146,7 @@ a.breadcrumb-item:hover {
 .cl7 {color: #777;}
 .cl8 {color: #888;}
 .cl9 {color: #999;}
-.cl10 {color: #17b978;}
+.cl10 {color: #223999;}
 .cl11 {color: #ccc;}
 .cl12 {color: #e71d69;}
 .cl13 {color: #15a752;}
@@ -1327,7 +1327,7 @@ a.breadcrumb-item:hover {
 
 
 /*==================================================================
-    SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE 
+    SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE
 ==================================================================*/
 /*//////////////////////////////////////////////////////////////////
 [ Size ]*/
@@ -1526,7 +1526,7 @@ a.breadcrumb-item:hover {
 
 
 /*==================================================================
-   BACKGROUND BACKGROUND BACKGROUND BACKGROUND BACKGROUND BACKGROUND 
+   BACKGROUND BACKGROUND BACKGROUND BACKGROUND BACKGROUND BACKGROUND
 ==================================================================*/
 .bg-none {background-color: transparent;}
 .bg0 {background-color: #fff;}
@@ -1539,7 +1539,7 @@ a.breadcrumb-item:hover {
 .bg7 {background-color: #777;}
 .bg8 {background-color: #888;}
 .bg9 {background-color: #999;}
-.bg10 {background-color: #17b978;}
+.bg10 {background-color: #223999;}
 .bg11 {background-color: #151515;}
 
 
@@ -1569,7 +1569,7 @@ a.breadcrumb-item:hover {
 
 
 /*==================================================================
- HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW 
+ HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW
 ==================================================================*/
 
 /*---------------------------------------------*/
@@ -1733,8 +1733,8 @@ a.breadcrumb-item:hover {
 .hov-cl0:hover {color: #fff;}
 .hov-bg0:hover {background-color: #fff;}
 
-.hov-cl10:hover {color: #17b978;}
-.hov-bg10:hover {background-color: #17b978;}
+.hov-cl10:hover {color: #223999;}
+.hov-bg10:hover {background-color: #223999;}
 
 /*---------------------------------------------*/
 .hov-img0 {
@@ -1760,21 +1760,21 @@ a.breadcrumb-item:hover {
 
 /*---------------------------------------------*/
 .hov-link1:hover {
-  color: #17b978;
+  color: #223999;
   text-decoration: underline;
 }
 
 /*---------------------------------------------*/
 .hov-btn1:hover {
-  background-color: #17b978;
-  border-color: #17b978;
+  background-color: #223999;
+  border-color: #223999;
   color: #fff;
 }
 
 /*---------------------------------------------*/
 .hov-btn2:hover {
-  border-color: #17b978;
-  color: #17b978;
+  border-color: #223999;
+  color: #223999;
 }
 
 
@@ -1786,7 +1786,7 @@ a.breadcrumb-item:hover {
 
 
 /*==================================================================
-   OTHER OTHER OTHER OTHER OTHER OTHER OTHER OTHER OTHER OTHER OTHER 
+   OTHER OTHER OTHER OTHER OTHER OTHER OTHER OTHER OTHER OTHER OTHER
 ==================================================================*/
 /*------------------------------------------------------------------
 [ Input ]*/
@@ -1846,7 +1846,7 @@ a.breadcrumb-item:hover {
 ==================================================================*/
 
 @media (max-width: 1199px) {
-  
+
 }
 
 
@@ -1861,10 +1861,10 @@ a.breadcrumb-item:hover {
 
 
 @media (max-width: 575px) {
-  
+
 }
 
 
 @media (max-width: 480px) {
-  
+
 }
